--- a/RGJ04/README
+++ b/RGJ04/README
@@ -4,6 +4,9 @@ by Paul <opatut> Bienkowski
 
 This is my project for the 4th Reddit game jam. Developed within 48 hours.
 
+Dependencies:
+    SFML 2
+
 Control Hints:
     M       Toggle music
     S       Skip turn
